docs: translate Javadocs and inline comments to English to improve readability for international developers